Made images appear on screen

--- a/Photopgropher-site/protfolio.html
+++ b/Photopgropher-site/protfolio.html
@@ -24,7 +24,7 @@
         </div>
     
     <header class=" port-head">
-        <img src="/Images/portfolio-1.jpg"/>
+        <img src="/Photopgropher-site/Images/portfolio-1.jpg"/>
         <label>Find beauty through the Eye of adai</label>
         
     </header>
@@ -32,13 +32,13 @@
     <main class="portfolio-main" id="port">
         <h2 class="sub-title port-sub">Portfolio</h2>
         <div class="protfolio-grid">
-            <img class="tall" src="/Images/portfolio2.jpg">
-            <img class="" src="/Images/portfolio-3.jpg">
-            <img class="wide tall" src="/Images/portfolio-4.jpg">
-            <img class="" src="/Images/portfolio-5.jpeg">
-            <img class="tall" src="/Images/portfolio-6.jpg">
-            <img class="tall" src="/Images/portfolio-7.jpg">
-            <img class="wide tall" src="/Images/portfolio-8.jpeg">
+            <img class="tall" src="/Photopgropher-site/Images/portfolio2.jpg">
+            <img class="" src="/Photopgropher-site/Images/portfolio-3.jpg">
+            <img class="wide tall" src="/Photopgropher-site/Images/portfolio-4.jpg">
+            <img class="" src="/Photopgropher-site/Images/portfolio-5.jpeg">
+            <img class="tall" src="/Photopgropher-site/Images/portfolio-6.jpg">
+            <img class="tall" src="/Photopgropher-site/Images/portfolio-7.jpg">
+            <img class="wide tall" src="/Photopgropher-site/Images/portfolio-8.jpeg">
         </div>
         <div class="div-contact">
         <a  href="akhi.html#contact"><button>Contact Me!  </button></a>
