--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<label>HTML: **</label>
 									<label>CSS: ***</label>
 									</div>
-								<a href="/Photopgropher-site/akhi.html" class="image main"><img src="images/Photograpy-site-demo.png" alt="" /></a>
+								<a href="/Photopgropher-site/akhi.html" class="image main" target="_blank"><img src="images/Photograpy-site-demo.png" alt="" /></a>
 								
 								<ul class="actions special">
 									<li><a href="#" class="button large">Source Code</a></li>
