--- a/Photopgropher-site/About.html
+++ b/Photopgropher-site/About.html
@@ -24,7 +24,7 @@
             </div>
         
         <header class=" about-head">
-            <img src="/Images/akhi-demo.jpg" >
+            <img src="/Photopgropher-site/Images/akhi-demo.jpg" >
             <h1 class="About-me">About me</h1>
             <label>Get to Know the Photographer a Little Better</label>
         </header>
@@ -33,7 +33,7 @@
         <main class="about-main" id="about">
             <h2 class="sub-title">About me</h2>
             <div class="about-wrapper">
-                <img src="/Images/Profile.jpg" width="550" height="550"/>
+                <img src="/Photopgropher-site/Images/Profile.jpg" width="550" height="550"/>
                 <div class="about-content">
                 <h2>Who am I?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione deserunt eum officia a nihil, corporis autem, possimus, temporibus perspiciatis cumque voluptatem exercitationem ullam atque incidunt ducimus illo voluptates dolore necessitatibus.</p>
