changed background implementation

--- a/Photopgropher-site/akhi.html
+++ b/Photopgropher-site/akhi.html
@@ -28,7 +28,9 @@
             </ul>
         </div>
     
-    <header class="head-wrapper"></header>
+    <header class="head-wrapper">
+        <img src="/Photopgropher-site/Images/jahmir.jpeg"/>
+    </header>
 
 <main>
     <section class="pricing-section" id="pricing-section">
