fixed-grid-layout in microsoft

--- a/Photopgropher-site/protfolio.html
+++ b/Photopgropher-site/protfolio.html
@@ -34,11 +34,11 @@
         <div class="protfolio-grid">
             <img class="tall" src="/Photopgropher-site/Images/portfolio2.jpg">
             <img class="" src="/Photopgropher-site/Images/portfolio-3.jpg">
-            <img class=" tall" src="/Photopgropher-site/Images/portfolio-4.jpg" >
+            <img class="wide tall" src="/Photopgropher-site/Images/portfolio-4.jpg" >
             <img class="" src="/Photopgropher-site/Images/portfolio-5.jpeg">
             <img class="tall" src="/Photopgropher-site/Images/portfolio-6.jpg">
             <img class="tall" src="/Photopgropher-site/Images/portfolio-7.jpg">
-            <img class="tall" src="/Photopgropher-site/Images/portfolio-8.jpeg" >
+            <img class="wide tall" src="/Photopgropher-site/Images/portfolio-8.jpeg">
         </div>
         <div class="div-contact">
         <a  href="akhi.html#contact"><button>Contact Me!  </button></a>
