--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<h2><a href="#">Photograpy site demo</a></h2>
 									</header>
 									<a href="/Photopgropher-site/akhi.html" class="image fit"><img src="images/Photograpy-site-demo.png" alt=""  width="408" height="249"/></a>
-									<p>In this demo using only HTML and CSS I created a Mock site for a photographer.This was the first site I made from scratch after looking at an example. Everything works correctly but the grid-layout only works as intended in firefox browsers.  </p>
+									<p>In this demo using only HTML and CSS I created a Mock site for a photographer.This was the first site I made from scratch after looking at an example. Everything works correctly but the grid-layout only works as intended in firefox browsers.  At moment not responsive.</p>
 									<div class="difficulty-2">
 										<label>HTML: **</label>
 										<label>CSS: ***</label>
