styled the thanks page

--- a/Thanks.html
+++ b/Thanks.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="thanks.css"/>
     <title>Thanks</title>
 </head>
 <body>
-    <label>Thanks</label>
+    <header class=" header">
+        <img src="/images/background.jpg" >
+        <label>I'm glad I caught your Eye! <br>I will be in contact shortly.<br class="center">Return my<a href=" https://thewonderinggecko.github.io/">Portfolio.</a></label>
+       
+    </header>
     
 </body>
 </html>
