made photograpy site template format

--- a/Photopgropher-site/About.html
+++ b/Photopgropher-site/About.html
@@ -13,7 +13,7 @@
         <div class="nav-background">
         </div>
             <div class="nav ">
-                <h1 class="Title">Adai's Eye Photography</h1>
+                <h1 class="Title">*Insert title here</h1>
                 <ul class="nav-tabs">
                     <li class="Nav-items"><a href="akhi.html">Home</a></li>
                     <li class="Nav-items"><a href="akhi.html#pricing-section">Pricing</a></li>
@@ -25,8 +25,8 @@
         
         <header class=" about-head">
             <img src="/Photopgropher-site/Images/akhi-demo.jpg" >
-            <h1 class="About-me">About me</h1>
-            <label>Get to Know the Photographer a Little Better</label>
+            <h1 class="About-me">*Title</h1>
+            <label>*sub title</label>
         </header>
 
 
@@ -35,7 +35,7 @@
             <div class="about-wrapper">
                 <img src="/Photopgropher-site/Images/Profile.jpg" width="550" height="550"/>
                 <div class="about-content">
-                <h2>Who am I?</h2>
+                <h2>*sub title</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione deserunt eum officia a nihil, corporis autem, possimus, temporibus perspiciatis cumque voluptatem exercitationem ullam atque incidunt ducimus illo voluptates dolore necessitatibus.</p>
                 </div>
 
