--- a/Photopgropher-site/protfolio.html
+++ b/Photopgropher-site/protfolio.html
@@ -12,7 +12,7 @@
     <div class="nav-background">
     </div>
         <div class="nav nav-top">
-            <h1 class="Title">Adai's Eye Photography</h1>
+            <h1 class="Title">*Insert title here</h1>
             <ul class="nav-tabs">
                 <li class="Nav-items"><a href="akhi.html">Home</a></li>
                 <li class="Nav-items"><a href="akhi.html#pricing-section">Pricing</a></li>
@@ -25,7 +25,7 @@
     
     <header class=" port-head">
         <img src="/Photopgropher-site/Images/portfolio-1.jpg"/>
-        <label>Find beauty through the Eye of adai</label>
+        <label>*Insert opener</label>
         
     </header>
 
