--- a/Photopgropher-site/akhi.html
+++ b/Photopgropher-site/akhi.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sono&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/27d3a86037.js" crossorigin="anonymous"></script> 
-    <title>Adai's Eye Photography</title>
+    <title>*Insert title here</title>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -17,7 +17,7 @@
     <div class="nav-background">
     </div>
         <div class="nav nav-top">
-            <h1 class="Title">Adai's Eye Photography</h1>
+            <h1 class="Title">*Insert title here</h1>
             <ul class="nav-tabs">
                 <li class="Nav-items"><a href="#">Home</a></li>
                 <li class="Nav-items"><a href="#pricing-section">Pricing</a></li>
@@ -39,38 +39,38 @@
 
        <div class="card-wrapper">
         <div class="pricing side-left">
-            <div class="standard"><h3>Deluxe</h3>
-                <label class="price">$275</label>
+            <div class="standard"><h3>Category</h3>
+                <label class="price">$000</label>
             </div>
             <div class="features">
-            <p>22 fully edited pictures</p>
-            <p>1.5 Hour Session</p>
-            <p>$8 for additional photos</p>
-            <p> 1 location 2 outfit</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
             </div>
         </div>
 
         <div class="pricing prime">
-            <div class="standard"><h3>Standard</h3>
-                <label class="price">$198</label>
+            <div class="standard"><h3>Category</h3>
+                <label class="price">$000</label>
             </div>
             <div class="features">
-            <p>15 fully edited pictures</p>
-            <p>1 Hour Session</p>
-            <p>$10 for additional photos</p>
-            <p> 1 location 1 outfit</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
             </div>
         </div>
 
         <div class="pricing side-right">
-            <div class="standard"><h3>Ultimate</h3>
-                <label class="price">$355</label>
+            <div class="standard"><h3>Category</h3>
+                <label class="price">$000</label>
             </div>
             <div class="features">
-            <p>30 fully edited pictures</p>
-            <p>2 Hour Session</p>
-            <p>$5 for additional photos</p>
-            <p> 2 location 2 outfit</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
             </div>
         </div>
         
@@ -82,20 +82,20 @@
     <section class="Contact" id="contact">
         <h2 class="sub-title">Contact</h2>
         <div class="contact-title">
-        <label class="intro-contact">You Live, I click.</label>
-        <p>Ready to get started? Fill out the short form below and we'll be in touch soon!</p></div>
+        <label class="intro-contact">*Subtitle</label>
+        <p>*Ready to go into</p></div>
         <form>
             <label class="Name form">Name</label>
             <input type="text" class="space"/>
             <label class="Email form">Email Address</label>
             <input type="email"/>
-            <label class="question">What type of session are you looking for?</label>
+            <label class="question">*Question</label>
             <div class="radios" class="space">
                 <span class="portrait"><input type="radio" class="radio" name="group1"></span>
                 <span class="group"><input type="radio" class="radio" name="group1"></span>
                 <span class="pet"><input type="radio" class="radio" name="group1"></span>
             </div>
-            <label class="question">Brief Description Of What You Want.</label>
+            <label class="question">*Message section</label>
             <textarea id="w3review" name="w3review" rows="8" cols="50"></textarea>
             <input type="submit" value="Submit" class="submit">
         </form>
