--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								
 									<div class="projects">
 										<label> Projects</label>
-										<a href="#posts" class="image"><img src="images/background.jpg" alt=""  width="100%" height="auto"/>
+										<a href="#posts" class="image" target="_blank"><img src="images/background.jpg" alt=""  width="100%" height="auto"/>
 										</a>
 									</div>
 								
