made project website responsive

--- a/Photopgropher-site/akhi.html
+++ b/Photopgropher-site/akhi.html
@@ -22,8 +22,8 @@
                 <li class="Nav-items"><a href="#">Home</a></li>
                 <li class="Nav-items"><a href="#pricing-section">Pricing</a></li>
                 <li class="Nav-items"><a href="#contact">Contact</a></li>
-                <li class="Nav-items"><a href="protfolio.html" target="_self">Portfolio</a></li>
-                <li class="Nav-items"><a  target="_self" href="About.html">About</a></li>
+                <li class="Nav-items nav-med"><a href="protfolio.html" target="_self">Portfolio</a></li>
+                <li class="Nav-items nav-med"><a  target="_self" href="About.html">About</a></li>
                 
             </ul>
         </div>
