--- a/Photopgropher-site/protfolio.html
+++ b/Photopgropher-site/protfolio.html
@@ -14,11 +14,11 @@
         <div class="nav nav-top">
             <h1 class="Title">*Insert title here</h1>
             <ul class="nav-tabs">
-                <li class="Nav-items"><a href="akhi.html">Home</a></li>
+                <li class="Nav-items nav-med"><a href="akhi.html">Home</a></li>
                 <li class="Nav-items"><a href="akhi.html#pricing-section">Pricing</a></li>
                 <li class="Nav-items"><a href="akhi.html#contact">Contact</a></li>
                 <li class="Nav-items"><a href="#port" >Portfolio</a></li>
-                <li class="Nav-items"><a  target="_self" href="About.html">About</a></li>
+                <li class="Nav-items nav-med"><a  target="_self" href="About.html">About</a></li>
                 
             </ul>
         </div>
