--- a/Photopgropher-site/About.html
+++ b/Photopgropher-site/About.html
@@ -15,11 +15,11 @@
             <div class="nav ">
                 <h1 class="Title">*Insert title here</h1>
                 <ul class="nav-tabs">
-                    <li class="Nav-items"><a href="akhi.html">Home</a></li>
+                    <li class="Nav-items nav-med"><a href="akhi.html">Home</a></li>
                     <li class="Nav-items"><a href="akhi.html#pricing-section">Pricing</a></li>
                     <li class="Nav-items"><a href="akhi.html#contact">Contact</a></li>
                     <li class="Nav-items"><a href="protfolio.html" target="_self">Portfolio</a></li>
-                    <li class="Nav-items"><a  href="#about">About</a></li>
+                    <li class="Nav-items nav-med"><a  href="#about">About</a></li>
                 </ul>
             </div>
         
