made portfolio visible on small screens

--- a/Photopgropher-site/About.html
+++ b/Photopgropher-site/About.html
@@ -18,8 +18,8 @@
                     <li class="Nav-items nav-med"><a href="akhi.html">Home</a></li>
                     <li class="Nav-items"><a href="akhi.html#pricing-section">Pricing</a></li>
                     <li class="Nav-items"><a href="akhi.html#contact">Contact</a></li>
-                    <li class="Nav-items"><a href="protfolio.html" target="_self">Portfolio</a></li>
-                    <li class="Nav-items nav-med"><a  href="#about">About</a></li>
+                    <li class="Nav-items nav-med"><a href="protfolio.html" target="_self">Portfolio</a></li>
+                    <li class="Nav-items "><a  href="#about">About</a></li>
                 </ul>
             </div>
         
