--- a/Ecommerce-site/Ecommerce.html
+++ b/Ecommerce-site/Ecommerce.html
@@ -16,7 +16,7 @@
         <div class="top-nav">
         <div class="title-section">
         <h1 class="title">Animal Adoptions</h1>
-        <img src="/Images/james-barker-v3-zcCWMjgM-unsplash.jpg" alt="Close up of dog" class="logo">
+        <img src="/Images/Animal Adoptions-1(1).jpg" alt="Close up of dog" class="logo">
         </div>
         <input type="text" name="" id="" placeholder="Search...." class="search"/>
         </div>
