added new section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
 										<li><a href="https://github.com/TheWonderingGecko/Photography-site-demo" class="button" target="_blank">Source Code</a></li>
 									</ul>
 								</article>
+
+								<article>
+									<header>
+										
+										<h2><a href="/Ecommerce-site/Ecommerce.html" target="_blank">Pet adoption (soft ecommerce site)</a></h2>
+									</header>
+									<a href="/Ecommerce-site/Ecommerce.html" class="image fit" target="_blank"><img src="/Ecommerce-site/Images/Animal Adoptions-1(1).jpg" alt=""  width="408" height="249"/></a>
+									<p>IN PROGRESS<br>but,<br>feel free to take a look.</p>
+									<div class="difficulty-2">
+										<label>HTML: **</label>
+										<label>CSS: ***</label>
+										</div>
+
+									<ul class="actions special">
+										<li><a href="https://github.com/TheWonderingGecko/Photography-site-demo" class="button" target="_blank">Source Code</a></li>
+									</ul>
+								</article>
 								
 							</section>
 
