added mern Project

--- a/index.html
+++ b/index.html
@@ -206,6 +206,48 @@
               </li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://phenomenal-brioche-cf750a.netlify.app/"
+                  target="_blank"
+                  >MERN workout application("in progress")</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://phenomenal-brioche-cf750a.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img src="/images/Mern-app.png" alt="" width="410" height="249"
+            /></a>
+            <p>
+              In the this application I take a crack at the Full stack Developer
+              options as I create a simple application to track workouts using
+              the mern stack.
+            </p>
+            <div class="difficulty-2">
+              <label>HTML: ****</label>
+              <label>CSS: *****</label>
+              <label>JS: ****</label>
+              <label>REACT: ***</label>
+              <label>NODE JS: ***</label>
+              <label>MONGODB/MONGOOSE: ***</label>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/Mearn-stack-trial-site"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
         </section>
 
         <!-- Footer -->
