finished mern app

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <p>
               Too put it simply, i'm just a guy who loves the Frontend!<br />
               Below you can find my proficiency level out of five with certain
-              software<br />
-              later occurrence's represent difficulty
+              software.<br />
+              Later occurrence's represent difficulty
             </p>
             <div class="profiency-level">
               <label>HTML: *****</label>
@@ -213,7 +213,7 @@
                 <a
                   href="https://phenomenal-brioche-cf750a.netlify.app/"
                   target="_blank"
-                  >MERN workout application("in progress")</a
+                  >MERN workout Tracker</a
                 >
               </h2>
             </header>
@@ -224,17 +224,20 @@
               ><img src="/images/Mern-app.png" alt="" width="410" height="249"
             /></a>
             <p>
-              In the this application I take a crack at the Full stack Developer
-              options as I create a simple application to track workouts using
-              the mern stack.
+              In this application, I aim to become a full-stack developer by
+              implementing a client-server architecture. Working on the server
+              creation through implementing token storage in local storage has
+              given me a greater understanding of backend and frontend
+              communication. Additionally, I have gained experience with React's
+              more advanced features.
             </p>
             <div class="difficulty-2">
-              <label>HTML: ****</label>
-              <label>CSS: *****</label>
+              <label>HTML: **</label>
+              <label>CSS: ***</label>
               <label>JS: ****</label>
-              <label>REACT: ***</label>
-              <label>NODE JS: ***</label>
-              <label>MONGODB/MONGOOSE: ***</label>
+              <label>REACT: ****</label>
+              <label>NODE JS: ****</label>
+              <label>MONGODB/MONGOOSE: ****</label>
             </div>
 
             <ul class="actions special">
