changed the opening statement

--- a/index.html
+++ b/index.html
@@ -49,9 +49,11 @@
           <header class="major">
             <h2>About Me</h2>
             <p>
-              Too put it simply, i'm just a guy who loves the Frontend!<br />
-              Below you can find my proficiency level out of five with certain
-              software.<br />
+              Too put it simply, i'm just a guy who loves Software development!
+              While I found my passion through front-end development I have
+              experience with the backend as well by implementing the MERN
+              stack. <br />Below you can find my proficiency level out of five
+              with certain software.<br />
               Later occurrence's represent difficulty
             </p>
             <div class="profiency-level">
@@ -59,6 +61,8 @@
               <label>CSS: *****</label>
               <label>JAVA: ****</label>
               <label>REACT: ****</label>
+              <label>NODE JS: **</label>
+              <label>MONGODB/MONGOOSE: ***</label>
             </div>
           </header>
 
