--- a/index.html
+++ b/index.html
@@ -84,37 +84,40 @@
           <article>
             <header>
               <h2>
-                <a href="/Photopgropher-site/akhi.html" target="_blank"
-                  >Photography site demo</a
+                <a
+                  href="https://legendary-pastelito-6e6eb6.netlify.app/"
+                  target="_blank"
+                  >Front End Practice(in Progress)</a
                 >
               </h2>
             </header>
             <a
-              href="/Photopgropher-site/akhi.html"
+              href="https://legendary-pastelito-6e6eb6.netlify.app/"
               class="image fit"
               target="_blank"
               ><img
-                src="images/Photograpy-site-demo.png"
+                src="images/Screenshot 2023-03-14 122219.png"
                 alt=""
                 width="408"
                 height="249"
             /></a>
             <p>
-              In this demo using only HTML and CSS I created a Mock site for a
-              photographer.This was the first site I made from scratch after
-              looking at an example. Everything works correctly but the
-              grid-layout only works as intended in firefox browsers. At moment
-              not mobile responsive.
+              I really got into software development through Frontend
+              development. So in effort to continue improving on these skills I
+              will be using Frontend Mentor to supply frontend projects and
+              complete them to the best of my ability and have them all visible
+              here as separate pages!
             </p>
             <div class="difficulty-2">
-              <label>HTML: **</label>
-              <label>CSS: ***</label>
+              <label>HTML</label>
+              <label>CSS</label>
+              <label>JS</label>
             </div>
 
             <ul class="actions special">
               <li>
                 <a
-                  href="https://github.com/TheWonderingGecko/Photography-site-demo"
+                  href="https://github.com/TheWonderingGecko/simple-QR-Link"
                   class="button"
                   target="_blank"
                   >Source Code</a
