--- a/index.html
+++ b/index.html
@@ -258,6 +258,53 @@
               </li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://storied-dolphin-2eae5d.netlify.app/"
+                  target="_blank"
+                  >Mobile first application
+                </a>
+              </h2>
+            </header>
+            <a
+              href="https://storied-dolphin-2eae5d.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img
+                src="/images/Mobile_first.png"
+                alt=""
+                width="410"
+                height="249"
+            /></a>
+            <p>
+              For this application, I mainly wanted to experiment with a
+              mobile-first approach to responsiveness. While making an
+              application responsive is generally the same across different
+              screen sizes, starting with a smaller screen and working up to
+              larger screens can provide a more straightforward path to follow.
+              In my experience, going from mobile to the next screen size was a
+              much simpler task than going from desktop down to mobile screens.
+            </p>
+            <div class="difficulty-2">
+              <label>HTML: **</label>
+              <label>CSS: *****</label>
+              <label>REACT: **</label>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/mobile-first-practice"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
         </section>
 
         <!-- Footer -->
