--- a/index.html
+++ b/index.html
@@ -85,95 +85,6 @@
             <header>
               <h2>
                 <a
-                  href="https://legendary-pastelito-6e6eb6.netlify.app/"
-                  target="_blank"
-                  >Front End Practice(in Progress)</a
-                >
-              </h2>
-            </header>
-            <a
-              href="https://legendary-pastelito-6e6eb6.netlify.app/"
-              class="image fit"
-              target="_blank"
-              ><img
-                src="images/Screenshot 2023-03-14 122219.png"
-                alt=""
-                width="408"
-                height="249"
-            /></a>
-            <p>
-              I really got into software development through Frontend
-              development. So in effort to continue improving on these skills I
-              will be using Frontend Mentor to supply frontend projects and
-              complete them to the best of my ability and have them all visible
-              here as separate pages!
-            </p>
-            <div class="difficulty-2">
-              <label>HTML</label>
-              <label>CSS</label>
-              <label>JS</label>
-            </div>
-
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/TheWonderingGecko/simple-QR-Link"
-                  class="button"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </li>
-            </ul>
-          </article>
-
-          <article>
-            <header>
-              <h2>
-                <a
-                  href="https://first-react-app-twg.netlify.app"
-                  target="_blank"
-                  >Amazon best seller replica/basic</a
-                >
-              </h2>
-            </header>
-            <a
-              href="https://first-react-app-twg.netlify.app"
-              class="image fit"
-              target="_blank"
-              ><img
-                src="/images/amazon-best-seller.png"
-                alt=""
-                width="410"
-                height="249"
-            /></a>
-            <p>
-              This replica was my first time using the react framework and
-              showcases experience with some of it's foundation features mainly
-              components and templates that reduces code bloat.
-            </p>
-            <div class="difficulty-2">
-              <label>HTML: ***</label>
-              <label>CSS: ***</label>
-              <label>JS: ***</label>
-              <label>REACT: ***</label>
-            </div>
-
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/TheWonderingGecko/Amazon-sellers"
-                  class="button"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </li>
-            </ul>
-          </article>
-
-          <article>
-            <header>
-              <h2>
-                <a
                   href="https://candid-centaur-f32f8b.netlify.app/"
                   target="_blank"
                   >Backroads App</a
@@ -191,21 +102,72 @@
                 height="249"
             /></a>
             <p>
-              This is a more full fledged front-end application developed using
-              the react framework. The same foundation concepts used as previous
-              example but on a grander scale.
+              This project provided me with an excellent opportunity to gain
+              foundational knowledge on setting up a React application. I
+              accomplished this by converting an older project to fit the new
+              framework. Through this process, I became familiar with the
+              necessary file set up and the breakdown of pages into components.
+              Overall, this experience was invaluable in terms of gaining
+              practical knowledge of React and its related technologies.
             </p>
             <div class="difficulty-2">
-              <label>HTML: ****</label>
-              <label>CSS: *****</label>
-              <label>JS: ****</label>
-              <label>REACT: ****</label>
+              <label>HTML: ***</label>
+              <label>CSS: ****</label>
+              <label>JS: **</label>
+              <label>REACT: **</label>
             </div>
 
             <ul class="actions special">
               <li>
                 <a
                   href="https://github.com/TheWonderingGecko/backroads"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://storied-dolphin-2eae5d.netlify.app/"
+                  target="_blank"
+                  >Mobile first application
+                </a>
+              </h2>
+            </header>
+            <a
+              href="https://storied-dolphin-2eae5d.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img
+                src="/images/Mobile_first.png"
+                alt=""
+                width="410"
+                height="249"
+            /></a>
+            <p>
+              For this application, I mainly wanted to experiment with a
+              mobile-first approach to responsiveness. While making an
+              application responsive is generally the same across different
+              screen sizes, starting with a smaller screen and working up to
+              larger screens can provide a more straightforward path to follow.
+              In my experience, going from mobile to the next screen size was a
+              much simpler task than going from desktop down to mobile screens.
+            </p>
+            <div class="difficulty-2">
+              <label>HTML: **</label>
+              <label>CSS: *****</label>
+              <label>REACT: **</label>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/mobile-first-practice"
                   class="button"
                   target="_blank"
                   >Source Code</a
@@ -263,41 +225,39 @@
             <header>
               <h2>
                 <a
-                  href="https://storied-dolphin-2eae5d.netlify.app/"
+                  href="https://legendary-pastelito-6e6eb6.netlify.app/"
                   target="_blank"
-                  >Mobile first application
-                </a>
+                  >Front End Practice(in Progress)</a
+                >
               </h2>
             </header>
             <a
-              href="https://storied-dolphin-2eae5d.netlify.app/"
+              href="https://legendary-pastelito-6e6eb6.netlify.app/"
               class="image fit"
               target="_blank"
               ><img
-                src="/images/Mobile_first.png"
+                src="images/Screenshot 2023-03-14 122219.png"
                 alt=""
-                width="410"
+                width="408"
                 height="249"
             /></a>
             <p>
-              For this application, I mainly wanted to experiment with a
-              mobile-first approach to responsiveness. While making an
-              application responsive is generally the same across different
-              screen sizes, starting with a smaller screen and working up to
-              larger screens can provide a more straightforward path to follow.
-              In my experience, going from mobile to the next screen size was a
-              much simpler task than going from desktop down to mobile screens.
+              I really got into software development through Frontend
+              development. So in effort to continue improving on these skills I
+              will be using Frontend Mentor to supply frontend projects and
+              complete them to the best of my ability and have them all visible
+              here as separate pages!
             </p>
             <div class="difficulty-2">
-              <label>HTML: **</label>
-              <label>CSS: *****</label>
-              <label>REACT: **</label>
+              <label>HTML</label>
+              <label>CSS</label>
+              <label>JS</label>
             </div>
 
             <ul class="actions special">
               <li>
                 <a
-                  href="https://github.com/TheWonderingGecko/mobile-first-practice"
+                  href="https://github.com/TheWonderingGecko/simple-QR-Link"
                   class="button"
                   target="_blank"
                   >Source Code</a
