updated site oreintation

--- a/index.html
+++ b/index.html
@@ -52,17 +52,87 @@
               Too put it simply, i'm just a guy who loves Software development!
               While I found my passion through front-end development I have
               experience with the backend as well by implementing the MERN
-              stack. <br />Below you can find my proficiency level out of five
-              with certain software.<br />
-              Later occurrence's represent difficulty
+              stack. <br />Below you can find the software I have experince
+              with. <br />
             </p>
-            <div class="profiency-level">
-              <label>HTML: *****</label>
-              <label>CSS: *****</label>
-              <label>JAVA: ****</label>
-              <label>REACT: ****</label>
-              <label>NODE JS: **</label>
-              <label>MONGODB/MONGOOSE: ***</label>
+            <div class="difficulty-2">
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/1024px-CSS.3.svg.png"
+                    alt="CSS logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Tailwind.png"
+                    alt="Tailwind logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/NodeJS.png"
+                    alt="Node logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/MongoDB_Logo_FullColorBlack_RGB-4td3yuxzjs.png"
+                    alt="MongoDB logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Python-logo-notext.svg.png"
+                    alt="Python logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/ISO_C++_Logo.svg.png"
+                    alt="C# logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/1280px-C_Sharp_wordmark.svg.png"
+                    alt="C++ logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
             </div>
           </header>
 
@@ -85,89 +155,67 @@
             <header>
               <h2>
                 <a
-                  href="https://candid-centaur-f32f8b.netlify.app/"
+                  href="https://startling-cactus-3a767f.netlify.app/"
                   target="_blank"
-                  >Backroads App</a
+                  >Frontend Work</a
                 >
               </h2>
             </header>
             <a
-              href="https://candid-centaur-f32f8b.netlify.app/"
+              href="https://startling-cactus-3a767f.netlify.app/"
               class="image fit"
               target="_blank"
               ><img
-                src="/images/backroads-app.png"
+                src="/images/Frontend-Portfolio.png"
                 alt=""
                 width="410"
                 height="249"
             /></a>
             <p>
-              This project provided me with an excellent opportunity to gain
-              foundational knowledge on setting up a React application. I
-              accomplished this by converting an older project to fit the new
-              framework. Through this process, I became familiar with the
-              necessary file set up and the breakdown of pages into components.
-              Overall, this experience was invaluable in terms of gaining
-              practical knowledge of React and its related technologies.
+              This is a portfolio of my frontend work. This allows me to save
+              space for more complex full-stack projects one my overall
+              portfolio.
             </p>
+
             <div class="difficulty-2">
-              <label>HTML: ***</label>
-              <label>CSS: ****</label>
-              <label>JS: **</label>
-              <label>REACT: **</label>
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Tailwind.png"
+                    alt="Tailwind logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
             </div>
 
             <ul class="actions special">
               <li>
                 <a
-                  href="https://github.com/TheWonderingGecko/backroads"
-                  class="button"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </li>
-            </ul>
-          </article>
-
-          <article>
-            <header>
-              <h2>
-                <a
-                  href="https://storied-dolphin-2eae5d.netlify.app/"
-                  target="_blank"
-                  >Mobile first application
-                </a>
-              </h2>
-            </header>
-            <a
-              href="https://storied-dolphin-2eae5d.netlify.app/"
-              class="image fit"
-              target="_blank"
-              ><img
-                src="/images/Mobile_first.png"
-                alt=""
-                width="410"
-                height="249"
-            /></a>
-            <p>
-              For this application, I mainly wanted to experiment with a
-              mobile-first approach to responsiveness. While making an
-              application responsive is generally the same across different
-              screen sizes, starting with a smaller screen and working up to
-              larger screens can provide a more straightforward path to follow.
-              In my experience, going from mobile to the next screen size was a
-              much simpler task than going from desktop down to mobile screens.
-            </p>
-            <div class="difficulty-2">
-              <label>HTML: **</label>
-              <label>CSS: *****</label>
-              <label>REACT: **</label>
-            </div>
-
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/TheWonderingGecko/mobile-first-practice"
+                  href="https://github.com/TheWonderingGecko/Frontend-Prac"
                   class="button"
                   target="_blank"
                   >Source Code</a
@@ -201,63 +249,57 @@
               more advanced features.
             </p>
             <div class="difficulty-2">
-              <label>HTML: **</label>
-              <label>CSS: ***</label>
-              <label>JS: ****</label>
-              <label>REACT: ****</label>
-              <label>NODE JS: ****</label>
-              <label>MONGODB/MONGOOSE: ****</label>
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/1024px-CSS.3.svg.png"
+                    alt="CSS logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/NodeJS.png"
+                    alt="Node logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/MongoDB_Logo_FullColorBlack_RGB-4td3yuxzjs.png"
+                    alt="MongoDB logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
             </div>
 
             <ul class="actions special">
               <li>
                 <a
                   href="https://github.com/TheWonderingGecko/Mearn-stack-trial-site"
-                  class="button"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </li>
-            </ul>
-          </article>
-
-          <article>
-            <header>
-              <h2>
-                <a
-                  href="https://legendary-pastelito-6e6eb6.netlify.app/"
-                  target="_blank"
-                  >Front End Practice(in Progress)</a
-                >
-              </h2>
-            </header>
-            <a
-              href="https://legendary-pastelito-6e6eb6.netlify.app/"
-              class="image fit"
-              target="_blank"
-              ><img
-                src="images/Screenshot 2023-03-14 122219.png"
-                alt=""
-                width="408"
-                height="249"
-            /></a>
-            <p>
-              I really got into software development through Frontend
-              development. So in effort to continue improving on these skills I
-              will be using Frontend Mentor to supply frontend projects and
-              complete them to the best of my ability and have them all visible
-              here as separate pages!
-            </p>
-            <div class="difficulty-2">
-              <label>HTML</label>
-              <label>CSS</label>
-              <label>JS</label>
-            </div>
-
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/TheWonderingGecko/simple-QR-Link"
                   class="button"
                   target="_blank"
                   >Source Code</a
