fixed grammar error

--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
             /></a>
             <p>
               This is a portfolio of my frontend work. This allows me to save
-              space for more complex full-stack projects one my overall
-              portfolio.
+              space for more complex full-stack projects here.
             </p>
 
             <div class="difficulty-2">
