updated with email warning

--- a/index.html
+++ b/index.html
@@ -245,7 +245,9 @@
               creation through implementing token storage in local storage has
               given me a greater understanding of backend and frontend
               communication. Additionally, I have gained experience with React's
-              more advanced features.
+              more advanced features.Warning:this is meant to be a test build if
+              you signup please don't use any real emails thank you. Test Login:
+              Can be located one the repo linked below.
             </p>
             <div class="difficulty-2">
               <ul>
