added new project

--- a/index.html
+++ b/index.html
@@ -308,6 +308,52 @@
               </li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://shiny-moxie-a76e9e.netlify.app/"
+                  target="_blank"
+                  >(In Progress)</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://shiny-moxie-a76e9e.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img
+                src="/images/Gradder-App.png"
+                alt=""
+                width="410"
+                height="249"
+            /></a>
+            <p>
+              This is the client side view of a MERN application that uses dummy
+              data to simulate how classes pulled from DB will appear. The
+              backend isn't launched so you can access each page here
+              <br /><br />
+
+              <a
+                href="https://shiny-moxie-a76e9e.netlify.app/#/app_form"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Application form</a
+              >
+
+              <br /><br />
+
+              <a
+                href="https://shiny-moxie-a76e9e.netlify.app/#/admin"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                Admin view</a
+              >
+            </p>
+          </article>
         </section>
 
         <!-- Footer -->
