--- a/index.html
+++ b/index.html
@@ -312,47 +312,91 @@
           <article>
             <header>
               <h2>
-                <a
-                  href="https://shiny-moxie-a76e9e.netlify.app/"
-                  target="_blank"
-                  >(In Progress)</a
+                <a href="https://shiny-moxie-a76e9e.netlify.app" target="_blank"
+                  >UMKC GTA APP</a
                 >
               </h2>
             </header>
             <a
-              href="https://shiny-moxie-a76e9e.netlify.app/"
+              href="https://shiny-moxie-a76e9e.netlify.app"
               class="image fit"
               target="_blank"
               ><img
-                src="/images/Gradder-App.png"
+                src="/images/admin-tablet.png"
                 alt=""
                 width="410"
                 height="249"
             /></a>
             <p>
-              This is the client side view of a MERN application that uses dummy
-              data to simulate how classes pulled from DB will appear. The
-              backend isn't launched so you can access each page here
-              <br /><br />
-
-              <a
-                href="https://shiny-moxie-a76e9e.netlify.app/#/app_form"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Application form</a
-              >
-
-              <br /><br />
-
-              <a
-                href="https://shiny-moxie-a76e9e.netlify.app/#/admin"
-                target="_blank"
-                rel="noopener noreferrer"
-              >
-                Admin view</a
-              >
+              In our team's GTA application website, I played a key role in
+              developing the MEARN (MongoDB, Express.js, React, Node.js)
+              application. I took charge of frontend development using Tailwind
+              CSS and React, ensuring an attractive and responsive user
+              interface. Additionally, I contributed to the backend by designing
+              the our schema in relation to the applications, handling
+              application submissions, and implementing file uploading
+              functionality. My efforts encompassed both frontend and backend
+              aspects, fostering seamless integration and enhancing the overall
+              performance and user experience of our application.
             </p>
+            <div class="difficulty-2">
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/1024px-CSS.3.svg.png"
+                    alt="CSS logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/NodeJS.png"
+                    alt="Node logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/MongoDB_Logo_FullColorBlack_RGB-4td3yuxzjs.png"
+                    alt="MongoDB logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/Grader-app"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
           </article>
         </section>
 
