--- a/index.html
+++ b/index.html
@@ -226,6 +226,106 @@
           <article>
             <header>
               <h2>
+                <a href="https://shiny-moxie-a76e9e.netlify.app" target="_blank"
+                  >UMKC GTA APP</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://shiny-moxie-a76e9e.netlify.app"
+              class="image fit"
+              target="_blank"
+              ><img
+                src="/images/admin-tablet.png"
+                alt=""
+                width="410"
+                height="249"
+            /></a>
+            <a
+              id="Video_link"
+              href="https://youtu.be/-UR512W3jks"
+              target="_blank"
+              >Video Demonstration</a
+            >
+            <div>Use student or Admin as username to see respected pages</div>
+            <p>
+              <br />
+
+              In our team's GTA application website, I played a key role in
+              developing the MEARN (MongoDB, Express.js, React, Node.js)
+              application. I took charge of frontend development using Tailwind
+              CSS and React, ensuring an attractive and responsive user
+              interface. Additionally, I contributed to the backend by designing
+              the our schema in relation to the applications, handling
+              application submissions, and implementing file uploading
+              functionality. My efforts encompassed both frontend and backend
+              aspects, fostering seamless integration and enhancing the overall
+              performance and user experience of our application.
+            </p>
+
+            <div class="difficulty-2">
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/1024px-CSS.3.svg.png"
+                    alt="CSS logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/NodeJS.png"
+                    alt="Node logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/MongoDB_Logo_FullColorBlack_RGB-4td3yuxzjs.png"
+                    alt="MongoDB logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/Grader-app"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
+
+          <article>
+            <header>
+              <h2>
                 <a
                   href="https://phenomenal-brioche-cf750a.netlify.app/"
                   target="_blank"
@@ -239,6 +339,13 @@
               target="_blank"
               ><img src="/images/Mern-app.png" alt="" width="410" height="249"
             /></a>
+            <div>
+              Test values <br />
+
+              Email:test12@gmail.com <br />
+
+              Password: th3Wonder!ingGEcko
+            </div>
             <p>
               In this application, I aim to become a full-stack developer by
               implementing a client-server architecture. Working on the server
@@ -301,96 +408,6 @@
               <li>
                 <a
                   href="https://github.com/TheWonderingGecko/Mearn-stack-trial-site"
-                  class="button"
-                  target="_blank"
-                  >Source Code</a
-                >
-              </li>
-            </ul>
-          </article>
-
-          <article>
-            <header>
-              <h2>
-                <a href="https://shiny-moxie-a76e9e.netlify.app" target="_blank"
-                  >UMKC GTA APP</a
-                >
-              </h2>
-            </header>
-            <a
-              href="https://shiny-moxie-a76e9e.netlify.app"
-              class="image fit"
-              target="_blank"
-              ><img
-                src="/images/admin-tablet.png"
-                alt=""
-                width="410"
-                height="249"
-            /></a>
-            <p>
-              In our team's GTA application website, I played a key role in
-              developing the MEARN (MongoDB, Express.js, React, Node.js)
-              application. I took charge of frontend development using Tailwind
-              CSS and React, ensuring an attractive and responsive user
-              interface. Additionally, I contributed to the backend by designing
-              the our schema in relation to the applications, handling
-              application submissions, and implementing file uploading
-              functionality. My efforts encompassed both frontend and backend
-              aspects, fostering seamless integration and enhancing the overall
-              performance and user experience of our application.
-            </p>
-            <div class="difficulty-2">
-              <ul>
-                <li class="no-border">
-                  <img
-                    src="images/HTML5_Logo_512.png"
-                    alt="HTML logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/1024px-CSS.3.svg.png"
-                    alt="CSS logo"
-                    class="dif-image"
-                  />
-                </li>
-
-                <li>
-                  <img
-                    src="images/Unofficial_JavaScript_logo_2.svg.png"
-                    alt="JS logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/React-icon.svg.png"
-                    alt="React logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/NodeJS.png"
-                    alt="Node logo"
-                    class="dif-image"
-                  />
-                </li>
-                <li>
-                  <img
-                    src="images/MongoDB_Logo_FullColorBlack_RGB-4td3yuxzjs.png"
-                    alt="MongoDB logo"
-                    class="dif-image"
-                  />
-                </li>
-              </ul>
-            </div>
-
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/TheWonderingGecko/Grader-app"
                   class="button"
                   target="_blank"
                   >Source Code</a
