--- a/index.html
+++ b/index.html
@@ -415,6 +415,78 @@
               </li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://iridescent-liger-e96cce.netlify.app/"
+                  target="_blank"
+                  >Little lemon(in Progress)</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://iridescent-liger-e96cce.netlify.app/"
+              class="image fit"
+              target="_blank"
+              ><img
+                src="/images/Little_lemon.png"
+                alt=""
+                width="410"
+                height="249"
+            /></a>
+
+            <p>
+              This project is the summation of the Meta Frontend Developer
+              Course through coursera. I use tailwind so it is formatted only
+              for the mobile view at the moment.
+            </p>
+            <div class="difficulty-2">
+              <ul>
+                <li class="no-border">
+                  <img
+                    src="images/HTML5_Logo_512.png"
+                    alt="HTML logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/1024px-CSS.3.svg.png"
+                    alt="CSS logo"
+                    class="dif-image"
+                  />
+                </li>
+
+                <li>
+                  <img
+                    src="images/Unofficial_JavaScript_logo_2.svg.png"
+                    alt="JS logo"
+                    class="dif-image"
+                  />
+                </li>
+                <li>
+                  <img
+                    src="images/React-icon.svg.png"
+                    alt="React logo"
+                    class="dif-image"
+                  />
+                </li>
+              </ul>
+            </div>
+
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/TheWonderingGecko/Mearn-stack-trial-site"
+                  class="button"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </li>
+            </ul>
+          </article>
         </section>
 
         <!-- Footer -->
