finished next application

--- a/index.html
+++ b/index.html
@@ -241,13 +241,16 @@
                 width="410"
                 height="249"
             /></a>
-            <a
-              id="Video_link"
-              href="https://youtu.be/-UR512W3jks"
-              target="_blank"
-              >Video Demonstration</a
-            >
-            <div>Use student or Admin as username to see respected pages</div>
+            <div class="extra-text">
+              <a
+                id="Video_link"
+                href="https://youtu.be/-UR512W3jks"
+                class="link"
+                target="_blank"
+                >Video Demonstration</a
+              >
+              <div>Use student or Admin as username to see respected pages</div>
+            </div>
             <p>
               <br />
 
@@ -339,7 +342,7 @@
               target="_blank"
               ><img src="/images/Mern-app.png" alt="" width="410" height="249"
             /></a>
-            <div>
+            <div class="extra-text">
               Test values <br />
 
               Email:test12@gmail.com <br />
@@ -422,7 +425,7 @@
                 <a
                   href="https://jocular-fenglisu-a1fb6a.netlify.app/"
                   target="_blank"
-                  >Car Hub(in Progress)</a
+                  >Car Hub</a
                 >
               </h2>
             </header>
@@ -432,6 +435,21 @@
               target="_blank"
               ><img src="/images/car_hop.png" alt="" width="410" height="249"
             /></a>
+
+            <p class="extra-text">
+              <span>
+                Currently there is an Next.js issue causing the scroll position
+                reset upon URL updates for the server-side rendering version. So
+                there is both a C.S version and a S.S version.
+              </span>
+
+              <a
+                class="link"
+                href="https://profound-macaron-d3632c.netlify.app"
+                target="_blank"
+                >Server side rendering Site</a
+              >
+            </p>
 
             <p>
               In this project, I aim to create a responsive and accessible
